--- a/style.css
+++ b/style.css
@@ -1,3 +1,66 @@
+body{
+    font-size: 2rem;
+    font-family: Montserrat, sans-serif;
+    color:white
+}
+
+
 #lightgreen{
  background-color: #8bf731;
 } 
+#normalgreen{
+    background-color: green;
+}
+#brightgreen{
+    background-color: #00ff00;
+}
+#bluegreen{
+    background-color: #1ae769;
+}#darkbluegreen{
+    background-color: #0eaa4a;
+}#darkgreen{
+    background-color: #097533;
+}#darkerbluegreen{
+    background-color: #0feeab;
+}
+.container{
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+}
+.box{
+    margin: 1rem;
+    padding: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+p{
+    padding: 0.5rem;
+    margin: 0.5rem;
+}
+.color{
+    color: black;
+}
+.container{
+    min-height: 80vh;
+    margin:0;
+    background: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9 ), rgba(0, 0, 0, 0.3));
+}
+body{
+    
+	display: flex;
+	align-items: center;
+    justify-content: center;
+    background-image: url(https://i.imgur.com/ku3uJ5w.jpg);
+    -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+a{
+    color: wheat;
+}
